[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/MarbleSpawner.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/spawner.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/spawner bottom.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/spawner top.png" type="Texture" id=4]
[ext_resource path="res://vfx/MarbleSpawner shader.tres" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 5 )
shader_param/y = 0.224

[sub_resource type="VisualShaderNodeTexture" id=1]
source = 2

[sub_resource type="VisualShaderNodeColorOp" id=2]
operator = 2

[sub_resource type="VisualShaderNodeScalarUniform" id=3]
uniform_name = "y"

[sub_resource type="VisualShaderNodeColorConstant" id=4]
constant = Color( 0.392157, 0.141176, 0.517647, 1 )

[sub_resource type="VisualShaderNodeIf" id=5]

[sub_resource type="VisualShaderNodeInput" id=6]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorDecompose" id=7]

[sub_resource type="VisualShader" id=12]
code = "shader_type canvas_item;
uniform float y;



void vertex() {
// Output:0

}

void fragment() {
// ScalarUniform:3
	float n_out3p0 = y;

// Input:8
	vec3 n_out8p0 = vec3(UV, 0.0);

// VectorDecompose:9
	float n_out9p0 = n_out8p0.x;
	float n_out9p1 = n_out8p0.y;
	float n_out9p2 = n_out8p0.z;

// Texture:12
	vec3 n_out12p0;
	float n_out12p1;
	{
		vec4 _tex_read = texture(TEXTURE, n_out8p0.xy);
		n_out12p0 = _tex_read.rgb;
		n_out12p1 = _tex_read.a;
	}

// Color:6
	vec3 n_out6p0 = vec3(0.392157, 0.141176, 0.517647);
	float n_out6p1 = 1.000000;

// ColorOp:13
	vec3 n_out13p0 = min(n_out12p0, n_out6p0);

// If:7
	float n_in7p2 = 0.00001;
	vec3 n_out7p0;
	if(abs(n_out3p0 - n_out9p1) < n_in7p2)
	{
		n_out7p0 = n_out13p0;
	}
	else if(n_out3p0 < n_out9p1)
	{
		n_out7p0 = n_out12p0;
	}
	else
	{
		n_out7p0 = n_out13p0;
	}

// Output:0
	COLOR.rgb = n_out7p0;
	COLOR.a = n_out12p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -48, -162.5 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 960, 260 )
nodes/fragment/3/node = SubResource( 3 )
nodes/fragment/3/position = Vector2( 320, 40 )
nodes/fragment/6/node = SubResource( 4 )
nodes/fragment/6/position = Vector2( 240, 120 )
nodes/fragment/7/node = SubResource( 5 )
nodes/fragment/7/position = Vector2( 720, 80 )
nodes/fragment/8/node = SubResource( 6 )
nodes/fragment/8/position = Vector2( -20, -80 )
nodes/fragment/9/node = SubResource( 7 )
nodes/fragment/9/position = Vector2( 320, -80 )
nodes/fragment/12/node = SubResource( 1 )
nodes/fragment/12/position = Vector2( 160, 280 )
nodes/fragment/13/node = SubResource( 2 )
nodes/fragment/13/position = Vector2( 440, 120 )
nodes/fragment/connections = PoolIntArray( 12, 0, 13, 0, 13, 0, 7, 4, 6, 0, 13, 1, 7, 0, 0, 0, 12, 1, 0, 1, 13, 0, 7, 3, 12, 0, 7, 5, 3, 0, 7, 0, 9, 1, 7, 1, 8, 0, 9, 0, 8, 0, 12, 0 )

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/y = 0.428

[sub_resource type="Animation" id=10]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteAnchor:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 22.5, 11.4541 )

[node name="MarbleSpawner" type="Node2D" groups=[
"MarbleSpawners",
]]
script = ExtResource( 1 )

[node name="SpriteAnchor" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteAnchor"]
material = SubResource( 9 )
position = Vector2( 0, 5 )
scale = Vector2( 0.159497, 0.159497 )
z_index = 1
texture = ExtResource( 2 )

[node name="composite" type="Node2D" parent="SpriteAnchor"]
visible = false
material = SubResource( 13 )
position = Vector2( 74.3535, 3.74577 )
scale = Vector2( 0.159, 0.159 )

[node name="top" type="Sprite" parent="SpriteAnchor/composite"]
texture = ExtResource( 4 )

[node name="bottom" type="Sprite" parent="SpriteAnchor/composite"]
position = Vector2( 0, 139.964 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spawn = SubResource( 10 )

[node name="timer" type="Timer" parent="."]

[node name="less" type="Area2D" parent="." groups=[
"rate buttons",
]]
position = Vector2( 12.0516, -11.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="less"]
position = Vector2( -12, 5 )
shape = SubResource( 11 )

[node name="more" type="Area2D" parent="." groups=[
"rate buttons",
]]
position = Vector2( 11.7969, 11.0205 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="more"]
position = Vector2( -12, 5 )
shape = SubResource( 11 )
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="less" to="." method="on_less_input_event"]
[connection signal="mouse_entered" from="less" to="." method="on_less_mouse_entered"]
[connection signal="mouse_exited" from="less" to="." method="on_less_mouse_exited"]
[connection signal="input_event" from="more" to="." method="on_more_input_event"]
[connection signal="mouse_entered" from="more" to="." method="on_more_mouse_entered"]
[connection signal="mouse_exited" from="more" to="." method="on_more_mouse_exited"]
